--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^0.4.0+8
   firebase_auth: ^0.15.0+1
   cloud_firestore: ^0.13.7
+  firebase_storage: ^3.1.6
+  image_picker: ^0.6.7+4
 
 dev_dependencies:
   flutter_test:
