--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^0.13.7
   firebase_storage: ^3.1.6
   image_picker: ^0.6.7+4
+  flutter_native_image: ^0.0.5
 
 dev_dependencies:
   flutter_test:
