--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_bloc: ^3.2.0
+  flutter_bloc: 4.0.0
   fcode_bloc: ^0.5.1
   logger: ^0.9.1
   firebase_core: ^0.4.0+8
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^3.1.6
   image_picker: ^0.6.7+4
   flutter_native_image: ^0.0.5
+  rxdart: 0.24.0
 
 dev_dependencies:
   flutter_test:
